Fixed off-centered Login and Registration submit button

--- a/application/src/pages/styles/login.css
+++ b/application/src/pages/styles/login.css
@@ -2,3 +2,7 @@
   display: flex;
   flex-flow: column;
 }
+
+.login-button {
+  margin-top: 15px;
+}
