--- a/application/src/pages/styles/registration.css
+++ b/application/src/pages/styles/registration.css
@@ -2,3 +2,7 @@
   display: flex;
   flex-flow: column;
 }
+
+.registration-button {
+  margin-top: 15px;
+}
